--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <h1 class="titulodatos">Arianyelina rincon</h1>
     <h2
     class="edad">Edad: 21 años</h2>
-    <img class="imagen" src="/modulo2/nosotros.jpg" alt="imagen1">
+    <img class="imagen" src="modulo2/nosotros.jpg" alt="imagen1">
     
     <a href="https://matias.me/nsfw/">
 <br>  <button class="boton">MIRA ESTO Y RIE UN POCO</button>
