--- a/modulo2/Ejercicioshtml/as/ejercicioshtml/ejercicio9.html
+++ b/modulo2/Ejercicioshtml/as/ejercicioshtml/ejercicio9.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menú de Navegación Estilizado</title>
-    <link rel="stylesheet" href="estilo9.css">
+    <link rel="stylesheet" href="/modulo2/Ejercicioshtml/estilo9.css">
 </head>
 <body>
     <h1>NAVEGACION A MIS EJERCICIOS</h1>
     <nav>
         <ul class="menu">
-          <li><a href="/ejercicio1.html">EJERCICIO1</a></li>
-          <li><a href="/ejercicio2.html">EJERCICIO2</a></li>
-          <li><a href="/ejercicio3.html">EJERCICIO3</a></li>
-          <li><a href="/ejercicio10.html">SOBREMI</a></li>
+          <li><a href="/modulo2/Ejercicioshtml/ejercicio1.html">EJERCICIO1</a></li>
+          <li><a href="/modulo2/Ejercicioshtml/ejercicio1.html">EJERCICIO2</a></li>
+          <li><a href="/modulo2/Ejercicioshtml/ejercicio3.html">EJERCICIO3</a></li>
+          <li><a href="/modulo2/Ejercicioshtml/ejercicio10.html">SOBREMI</a></li>
         </ul>
       </nav>
 
