--- a/modulo2/Ejercicioshtml/ejercicio9.html
+++ b/modulo2/Ejercicioshtml/ejercicio9.html
@@ -10,10 +10,10 @@
     <h1>NAVEGACION A MIS EJERCICIOS</h1>
     <nav>
         <ul class="menu">
-          <li><a href="/modulo2/Ejercicioshtml/as/ejercicioshtml/ejercicio1.html">EJERCICIO1</a></li>
-          <li><a href="/ejercicio2.html">EJERCICIO2</a></li>
-          <li><a href="/ejercicio3.html">EJERCICIO3</a></li>
-          <li><a href="/ejercicio10.html">SOBREMI</a></li>
+          <li><a href="/modulo2/Ejercicioshtml/ejercicio1.html">EJERCICIO1</a></li>
+          <li><a href="/modulo2/Ejercicioshtml/ejercicio7.html">EJERCICIO7</a></li>
+          <li><a href="/modulo2/Ejercicioshtml/ejercicio3.html">EJERCICIO3</a></li>
+          <li><a href="/modulo2/Ejercicioshtml/ejercicio10.html">SOBREMI</a></li>
         </ul>
       </nav>
 
