--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Calculadora Científica</title>
-  <link rel="stylesheet" href="style.css">
+ <link rel="stylesheet" href="/modulo3/calculadoracientifica/style.css">
 </head>
 <body>
   <div class="calculadora">
