--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
 </div>
   </div>
 
-  <script src="script.js"></script>
+  <script src="/modulo3/calculadoracientifica/script.js"></script>
 </body>
 </html>
