--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>Calculadora Científica</title>
- <link rel="stylesheet" href="/modulo3/calculadoracientifica/style.css">
+ <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <canvas id="particles-canvas"></canvas>
+  
+
+
   <div class="calculadora">
    
     <div class="display" id="display">0</div>
@@ -44,6 +48,6 @@
 </div>
   </div>
 
-  <script src="/modulo3/calculadoracientifica/script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
