--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Calculadora Científica</title>
- <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="/modulo3/calculadoracientifica/style.css">
 </head>
 <body>
   <canvas id="particles-canvas"></canvas>
@@ -48,6 +48,6 @@
 </div>
   </div>
 
-  <script src="script.js"></script>
+  <script src="/modulo3/calculadoracientifica/script.js"></script>
 </body>
 </html>
