--- a/modulo3/portafolio/portafolio/index.html
+++ b/modulo3/portafolio/portafolio/index.html
@@ -47,7 +47,7 @@
      <main class="main">
         <section class="home" id="home">
             <div class="home__container container grid">
-                <img src="/Nueva carpeta (2)/img/foto.jpg" alt="" class="home__img">
+                <img src="/modulo3/portafolio/img/foto.jpg" alt="" class="home__img">
 
                 <div class="home__data">
                     <h1 class="homename">Arianyelina Rincon</h1>
@@ -103,7 +103,7 @@
         <div class="serviciositems">
                 <div class="iconbox">
                 <img 
-                src="/img/flor.png"
+                src="/modulo3/portafolio/img/flor.png"
                  alt="" 
                  class="serviciosicon"/>
                 <div class="serviciosdot">
@@ -118,7 +118,7 @@
         <div class="serviciositems">
                 <div class="iconbox">
                 <img 
-                src="/img/flor.png"
+                src="/modulo3/portafolio/img/flor.png"
                  alt="" 
                  class="serviciosicon"/>
                 <div class="serviciosdot">
@@ -134,7 +134,7 @@
         <div class="serviciositems">
                 <div class="iconbox">
                 <img 
-                src="/img/flor.png"
+                src="/modulo3/portafolio/img/flor.png"
                  alt="" 
                  class="serviciosicon"/>
                 <div class="serviciosdot">
@@ -150,7 +150,7 @@
         <div class="serviciositems">
                 <div class="iconbox">
                 <img 
-                src="/img/flor.png"
+                src="/modulo3/portafolio/img/flor.png"
                  alt="" 
                  class="serviciosicon"/>
                 <div class="serviciosdot">
@@ -166,7 +166,7 @@
         <div class="serviciositems">
                 <div class="iconbox">
                 <img 
-                src="/img/flor.png"
+                src="/modulo3/portafolio/img/flor.png"
                  alt="" 
                  class="serviciosicon"/>
                 <div class="serviciosdot">
@@ -181,7 +181,7 @@
         <div class="serviciositems">
                 <div class="iconbox">
                 <img 
-                src="/img/flor.png"
+                src="/modulo3/portafolio/img/flor.png"
                  alt="" 
                  class="serviciosicon"/>
                 <div class="serviciosdot">
@@ -302,7 +302,7 @@
         </div>
 
 
-        <div class="proyectoitem grid mix appdeescritorio">
+        <div class="proyectoitem grid mix paginasweb">
             <img src="#" alt="" class="proyectoimg">
 
             <div class="proyectodata">
@@ -321,7 +321,7 @@
         </div>
 
 
-        <div class="proyectoitem grid mix paginasweb">
+        <div class="proyectoitem grid mix appdeescritorio">
             <img src="#" alt="" class="proyectoimg">
 
             <div class="proyectodata">
@@ -368,13 +368,7 @@
                         <a href="https://ve.linkedin.com/in/arianyelina-rincon-940458374" class="contactosociallink">Linkedin</a>
                     </li>
                     <li>
-                        <a href="#" class="contactosociallink">Upwork</a>
-                    </li>
-                    <li>
-                        <a href="#" class="contactosociallink">Freelancer</a>
-                    </li>
-                    <li>
-                        <a href="#" class="contactosociallink">Workana</a>
+                        <a href="https://github.com/Arianyelinarincon?tab=repositories" class="contactosociallink">Github</a>
                     </li>
                    
                 </ul>
@@ -441,6 +435,6 @@
 
    
 <!-- Js-->
-   <script src="main.js"></script>
+   <script src="/modulo3/portafolio/portafolio/main.js"></script>
 </body>
 </html>
