--- a/modulo3/portafolio/portafolio/index.html
+++ b/modulo3/portafolio/portafolio/index.html
@@ -333,7 +333,7 @@
                             <li>mysql</li>
                             <li>Js</li>
                         </ul>
-                        <a href="https://github.com/Arianyelinarincon/curso-de-programacion/tree/main/modulo2/calculadoracientifica" class="proyectolink text-sm">aqui va el link del repositorio</a>
+                        <a href="https://github.com/Arianyelinarincon/curso-de-programacion/tree/main/modulo2/calculadoracientifica" class="proyectolink text-sm"> link del repositorio</a>
                    
                 
             </div>
