--- a/modulo3/portafolio/portafolio/index.html
+++ b/modulo3/portafolio/portafolio/index.html
@@ -284,7 +284,7 @@
 
     <div class=" proyectocontainer grid">
         <div class="proyectoitem grid mix paginasweb">
-            <img src="#" alt="" class="proyectoimg">
+            <img src="/modulo3/portafolio/img/blog-1.png" alt="" class="proyectoimg">
 
             <div class="proyectodata">
                 <h3 class="proyectotitulo text-lg">Agencia de vuelos</h3>
@@ -303,7 +303,7 @@
 
 
         <div class="proyectoitem grid mix paginasweb">
-            <img src="#" alt="" class="proyectoimg">
+            <img src="/modulo3/portafolio/img/project-1.png" alt="" class="proyectoimg">
 
             <div class="proyectodata">
                 <h3 class="proyectotitulo text-lg">Calculadora cientifica</h3>
@@ -322,7 +322,7 @@
 
 
         <div class="proyectoitem grid mix appdeescritorio">
-            <img src="#" alt="" class="proyectoimg">
+            <img src="/modulo3/portafolio/img/project-2.png" alt="" class="proyectoimg">
 
             <div class="proyectodata">
                 <h3 class="proyectotitulo text-lg">Sistema de gestion de recetas venezolanas</h3>
