--- a/modulo3/portafolio/portafolio/index.html
+++ b/modulo3/portafolio/portafolio/index.html
@@ -47,7 +47,7 @@
      <main class="main">
         <section class="home" id="home">
             <div class="home__container container grid">
-                <img src="/modulo3/portafolio/img/foto.jpg" alt="" class="home__img">
+                <img src="/img/foto.jpg" alt="" class="home__img">
 
                 <div class="home__data">
                     <h1 class="homename">Arianyelina Rincon</h1>
