--- a/modulo3/portafolio/portafolio/index.html
+++ b/modulo3/portafolio/portafolio/index.html
@@ -47,7 +47,7 @@
      <main class="main">
         <section class="home" id="home">
             <div class="home__container container grid">
-                <img src="/modulo3/portafolio/img/foto.jpg" alt="" class="home__img">
+                <img src="/img/foto.jpg" alt="" class="home__img">
 
                 <div class="home__data">
                     <h1 class="homename">Arianyelina Rincon</h1>
@@ -92,7 +92,7 @@
              en los que aprendí más cometiendo errores que acertando. No soy experta (todavía), pero tengo muchas ganas, y 
              eso también cuenta.
         </p>
-        <a href="#pdf" 
+        <a href="/modulo3/portafolio/pulgar.pdf" 
         class="button buttonflex textsm">
         <i class="ri-download-line"></i>DESCARGAR</a>
      </section>
@@ -103,7 +103,7 @@
         <div class="serviciositems">
                 <div class="iconbox">
                 <img 
-                src="/modulo3/portafolio/img/flor.png"
+                src="/img/flor.png"
                  alt="" 
                  class="serviciosicon"/>
                 <div class="serviciosdot">
@@ -118,7 +118,7 @@
         <div class="serviciositems">
                 <div class="iconbox">
                 <img 
-                src="/modulo3/portafolio/img/flor.png"
+                src="/img/flor.png"
                  alt="" 
                  class="serviciosicon"/>
                 <div class="serviciosdot">
@@ -134,7 +134,7 @@
         <div class="serviciositems">
                 <div class="iconbox">
                 <img 
-                src="/modulo3/portafolio/img/flor.png"
+                src="/img/flor.png"
                  alt="" 
                  class="serviciosicon"/>
                 <div class="serviciosdot">
@@ -150,7 +150,7 @@
         <div class="serviciositems">
                 <div class="iconbox">
                 <img 
-                src="/modulo3/portafolio/img/flor.png"
+                src="/img/flor.png"
                  alt="" 
                  class="serviciosicon"/>
                 <div class="serviciosdot">
@@ -166,7 +166,7 @@
         <div class="serviciositems">
                 <div class="iconbox">
                 <img 
-                src="/modulo3/portafolio/img/flor.png"
+                src="/img/flor.png"
                  alt="" 
                  class="serviciosicon"/>
                 <div class="serviciosdot">
@@ -181,7 +181,7 @@
         <div class="serviciositems">
                 <div class="iconbox">
                 <img 
-                src="/modulo3/portafolio/img/flor.png"
+                src="/img/flor.png"
                  alt="" 
                  class="serviciosicon"/>
                 <div class="serviciosdot">
@@ -284,7 +284,7 @@
 
     <div class=" proyectocontainer grid">
         <div class="proyectoitem grid mix paginasweb">
-            <img src="/modulo3/portafolio/img/blog-1.png" alt="" class="proyectoimg">
+            <img src="/img/blog-1.png" alt="" class="proyectoimg">
 
             <div class="proyectodata">
                 <h3 class="proyectotitulo text-lg">Agencia de vuelos</h3>
@@ -303,7 +303,7 @@
 
 
         <div class="proyectoitem grid mix paginasweb">
-            <img src="/modulo3/portafolio/img/project-1.png" alt="" class="proyectoimg">
+            <img src="/img/project-1.png" alt="" class="proyectoimg">
 
             <div class="proyectodata">
                 <h3 class="proyectotitulo text-lg">Calculadora cientifica</h3>
@@ -322,7 +322,7 @@
 
 
         <div class="proyectoitem grid mix appdeescritorio">
-            <img src="/modulo3/portafolio/img/project-2.png" alt="" class="proyectoimg">
+            <img src="/img/project-2.png" alt="" class="proyectoimg">
 
             <div class="proyectodata">
                 <h3 class="proyectotitulo text-lg">Sistema de gestion de recetas venezolanas</h3>
