--- a/modulo3/portafolio/portafolio/index.html
+++ b/modulo3/portafolio/portafolio/index.html
@@ -47,7 +47,7 @@
      <main class="main">
         <section class="home" id="home">
             <div class="home__container container grid">
-                <img src="/img/foto.jpg" alt="" class="home__img">
+                <img src="/modulo3/portafolio/portafolio/img/foto.jpg" alt="" class="home__img">
 
                 <div class="home__data">
                     <h1 class="homename">Arianyelina Rincon</h1>
@@ -92,7 +92,7 @@
              en los que aprendí más cometiendo errores que acertando. No soy experta (todavía), pero tengo muchas ganas, y 
              eso también cuenta.
         </p>
-        <a href="/modulo3/portafolio/pulgar.pdf" 
+        <a href="/modulo3/portafolio/portafolio/pulgar.pdf" 
         class="button buttonflex textsm">
         <i class="ri-download-line"></i>DESCARGAR</a>
      </section>
