--- a/modulo3/portafolio/portafolio/index.html
+++ b/modulo3/portafolio/portafolio/index.html
@@ -425,7 +425,7 @@
 
     </main>
    <!-- mixitup-->
-    <script src="/portafolio/mixitup.min.js"></script>
+    <script src="portafolio/mixitup.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/mixitup@3/dist/mixitup.min.js"></script>
     <!-- emailjs-->
      <script
@@ -435,6 +435,6 @@
 
    
 <!-- Js-->
-   <script src="/modulo3/portafolio/portafolio/main.js"></script>
+   <script src="portafolio/main.js"></script>
 </body>
 </html>
