--- a/modulo3/portafolio/portafolio/index.html
+++ b/modulo3/portafolio/portafolio/index.html
@@ -92,7 +92,7 @@
              en los que aprendí más cometiendo errores que acertando. No soy experta (todavía), pero tengo muchas ganas, y 
              eso también cuenta.
         </p>
-        <a href="portafolio/pulgar.pdf" 
+        <a href="pulgar.pdf" download="nombre_descarga.pdf"
         class="button buttonflex textsm">
         <i class="ri-download-line"></i>DESCARGAR</a>
      </section>
